<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/app_toolbar"
        style="@style/AppToolbarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/input_cost_of_service"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_cost_of_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/input_cost_of_service"
        app:boxBackgroundMode="outline"
        app:layout_constraintBottom_toTopOf="@+id/service_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/service_question"
        style="@style/TextQuestionStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/service_question"
        app:layout_constraintStart_toStartOf="@+id/input_cost_of_service"
        app:layout_constraintTop_toBottomOf="@+id/input_cost_of_service" />

    <RadioGroup
        android:id="@+id/tip_options"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/input_cost_of_service"
        app:layout_constraintStart_toStartOf="@+id/input_cost_of_service"
        app:layout_constraintTop_toBottomOf="@+id/service_question">

        <RadioButton
            android:id="@+id/tip_option_twenty_percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/amazing_service" />

        <RadioButton
            android:id="@+id/tip_option_eighteen_percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/good_service" />

        <RadioButton
            android:id="@+id/tip_option_fifteen_percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok_service" />
    </RadioGroup>


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/round_up_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/round_up_tip"
        app:layout_constraintEnd_toEndOf="@+id/tip_options"
        app:layout_constraintStart_toStartOf="@+id/tip_options"
        app:layout_constraintTop_toBottomOf="@+id/tip_options" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_calculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/tip_amount"
        app:layout_constraintEnd_toEndOf="@+id/round_up_switch"
        app:layout_constraintStart_toStartOf="@+id/round_up_switch"
        app:layout_constraintTop_toBottomOf="@id/round_up_switch"
        app:layout_constraintVertical_bias="0.5" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tip_amount"
        style="@style/TextQuestionStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tip_amount"
        app:layout_constraintEnd_toEndOf="@id/btn_calculate"
        app:layout_constraintTop_toBottomOf="@+id/btn_calculate" />

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_calculate"
        app:layout_constraintStart_toStartOf="@+id/btn_calculate"
        app:layout_constraintTop_toBottomOf="@+id/tip_amount"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>